--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,8 @@ h6 {
 
 .education-entry,
 .work-entry,
-.project-entry {
+.project-entry,
+.online-entry {
   padding: 0 5%;
 }
 
@@ -112,7 +113,8 @@ a {
   color: #f5ae23;
 }
 
-.white-text {
+.white-text,
+.twitter {
   font-weight: bold;
   color: #fff;
 }
@@ -140,6 +142,8 @@ a {
   justify-content: space-around;
   padding: 10px;
 }
+
+
 
 .flex-column {
   display: flex;
