Finish Positions Held

--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,11 @@ h6 {
   padding: 0 5%;
 }
 
+.position-entry {
+  padding: 0 5%;
+  display:flex;
+}
+
 h1 {
   font-size: 40px;
   color: #f5a623;
